# CPSSim

./: .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  imgui.ini
LateralMotionControl/: modelDescription.xml
LateralMotionControl/sources/: LateralMotionControl.h
apps/bosch_example/: main.cpp
apps/cli/: cli_application.cpp  cli_application.hpp  command_parser.cpp  command_parser.hpp  command_registry.cpp  command_registry.hpp  main.cpp
apps/conformance/: main.cpp
apps/gui/: gui_application.cpp  gui_application.hpp  imgui.ini  main.cpp  native_file_dialog.cpp  native_file_dialog.hpp
apps/qt_gui/: analysis_widgets.cpp  analysis_widgets.hpp  appearance_preferences.cpp  appearance_preferences.hpp  architecture_connection_painter.cpp  architecture_connection_painter.hpp  architecture_model.cpp  architecture_model.hpp  architecture_node_painter.cpp  architecture_node_painter.hpp  architecture_view.cpp  architecture_view.hpp  event_table_widget.cpp  event_table_widget.hpp  explorer_widget.cpp  explorer_widget.hpp  main.cpp  main_window.cpp  main_window.hpp  resource_assignment_model.cpp  resource_assignment_model.hpp  runtime_widgets.cpp  runtime_widgets.hpp  structural_edit_controller.cpp  structural_edit_controller.hpp  system_builder_widget.cpp  system_builder_widget.hpp  workbench_bridge.cpp  workbench_bridge.hpp  workbench_style.cpp  workbench_style.hpp
cmake/: ClangTidy.cmake  PatchQtNodes.cmake  ProjectSanitizers.cmake  ProjectWarnings.cmake
cmake/patches/: qtnodes-embedded-build.patch
config/examples/: basic.json
docs/: COMMANDS.md  MODULE-INTERACTIONS.md  README.md
docs/adr/: 0000-template.md  0001-use-integer-ticks.md  0005-schedule-periodic-releases-at-runtime.md  0006-assign-resources-to-runtime-tasks.md  0008-order-independent-resources-by-resource-id.md  0010-generate-task-routed-messages-with-fixed-delay.md  0011-plan-user-configured-task-channels.md  0012-compare-normalized-matlab-timing-observations.md  0013-order-same-tick-periodic-releases-by-task-semantics.md  0016-use-a-small-fmi2-co-simulation-loader.md  0017-order-online-functional-observation-before-same-tick-actions.md  0019-use-typed-run-plans-and-atomic-gui-application.md  0020-use-versioned-json-run-plans-with-structural-signatures.md  0022-share-application-services-across-cli-paths.md  0023-use-detached-system-drafts-and-atomic-project-rebuilds.md  0024-use-cooperative-fast-batches-and-completed-run-implot.md  0025-use-event-driven-frames-and-immutable-result-finalization.md  0026-use-qt-widgets-and-flat-qtnodes-adapter.md
docs/assist/: MODULE-INTERACTIONS.md  README.md
docs/developer/: ARCHITECTURE-OVERVIEW.md  BOSCH-FMI-AND-CONFORMANCE.md  COMMUNICATION-AND-FUNCTIONAL-MODELS.md  CONFIGURATION-AND-PROJECTS.md  CUSTOMIZATION-COOKBOOK.md  DOCUMENTATION-MAINTENANCE.md  DOMAIN-MODEL.md  FUTURE-DEVELOPMENT.md  GUI-AND-WORKBENCH.md  README.md  REPOSITORY-AND-BUILD-TARGETS.md  RESULTS-EXPORT-AND-CLI.md  SCHEDULING-AND-RESOURCES.md  SIMULATION-EVENT-CYCLE.md  TESTING-AND-QUALITY.md
docs/devlog/: 2026-07-19-bosch-example-execution.md
docs/gui/: GUI_ARCHITECTURE.md  GUI_PERFORMANCE.md  QT_MIGRATION_CHECKLIST.md  QT_NATIVE_PLOT_EVALUATION.md  README.md
docs/guide/: AGENT-HANDOFF.md  DEVELOPER-GUIDE.md  FUTURE-WORK.md  PROJECT-TOUR.md  RESULTS-AND-EXPORT.md  SIMULATION-SEMANTICS.md
docs/instructions/: 00_PROJECT_CHARTER.md  01_ARCHITECTURE.md  02_ROADMAP.md  03_DEVELOPMENT_WORKFLOW.md  04_TESTING_AND_VALIDATION.md  05_DOCUMENTATION_POLICY.md
docs/modules/: README.md  application-interfaces.md  bosch-timing-conformance.md  canonical-events.md  causal-messages.md  experiment-configuration.md  fixed-priority-scheduling.md  fmi2-co-simulation.md  multiple-resources.md  online-functional-interaction.md  periodic-releases.md
docs/refine/: CODEX_EXECUTION_RULES.md  CPSSim_Make_Interface_Refactor_Instructions.md  G1_PROJECT_STARTUP_AND_FILES.md  G2_SYSTEM_BUILDER.md  G3_WORKBENCH_USABILITY.md  G4_RESULTS_AND_EXPORT.md  G6_GUI_PERFORMANCE_ARCHITECTURE_STABILIZATION.md  G7_1_QT_USABILITY_DOCKING_AND_EDITING_STABILIZATION.md  G7_DESCARTES_BUILDER_REFERENCE_NOTES.md  README.md  TASK_TEMPLATE.md
docs/user/: BOSCH-CHALLENGE-WORKFLOW.md  CORE-CONCEPTS.md  EXECUTION-AND-RESULTS.md  FIRST-GENERIC-EXPERIMENT.md  GLOSSARY-AND-LIMITS.md  GUI-WORKBENCH.md  INSTALLATION.md  OVERVIEW.md  README.md  TROUBLESHOOTING.md
examples/: readme_examples.md
experiments/bosch_v10_reference/: README.md  checksums.sha256  reference_metadata.json
resources/: BOSCH_CHALLENGE_README.md  README.md  cps_single_vehicle_v10.slxc
scripts/: verify.sh
simulink/: compare_performance.m  cps_fmu_smoke_test.slx  cps_single_vehicle_v10.slx  cps_v10_inputs.mat  cps_v10_scheduled_cloud1.mat  cps_v10_scheduled_dedicated.mat  export_cps_v10_reference.m  plot_lateral_error.m  prepare_cps_v10.m  prepare_cps_v10_scheduled.m
simulink/timing/: define_cps_v10_taskset.m  encode_fmu_triggers.m  generate_periodic_jobs.m  simulate_fp_resources.m
tests/: smoke_test.cpp
tests/analysis/: completed_run_finalizer_test.cpp  run_result_test.cpp
tests/application/: bosch_project_factory_test.cpp  bosch_result_analysis_test.cpp  gui_layout_store_test.cpp  recent_projects_test.cpp  result_export_test.cpp  workbench_application_test.cpp
tests/bosch/: bosch_fmi2_functional_model_test.cpp  example_data_test.cpp  trigger_encoder_test.cpp
tests/cli/: cli_application_test.cpp
tests/config/: json_config_test.cpp  json_run_plan_test.cpp
tests/conformance/: bosch_functional_reference_test.cpp  bosch_reference_test.cpp
tests/fmi/: fmi2_importer_test.cpp
tests/functional/: functional_runtime_test.cpp
tests/gui/: application_state_test.cpp  architecture_graph_test.cpp  display_scale_test.cpp  draft_run_plan_test.cpp  editable_system_draft_test.cpp  event_table_model_test.cpp  frame_scheduler_test.cpp  gui_profiler_test.cpp  presentation_model_test.cpp  presentation_publication_test.cpp  resource_presentation_test.cpp  selection_model_test.cpp  signal_series_test.cpp  timeline_model_test.cpp  (+3 more)
(+254 files in other folders)
